alignment fixes

--- a/src/app/team-form/team-form.component.scss
+++ b/src/app/team-form/team-form.component.scss
@@ -31,7 +31,7 @@
   margin-top: 10px;
 text-align: center;
 width: 15rem;
-margin: auto;
+float: left;
  }
 
  .info{
